<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lavender"
    tools:context=".MainMenuFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/card_container_bg">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/newplanCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintHeight_percent="0.35"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/primary_red"
                app:strokeWidth="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_container_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:layout_constraintWidth_percent="1"
                        app:layout_constraintHeight_percent="0.333"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        android:text="@string/card1Txt"
                        android:textAlignment="center"
                        android:fontFamily="@font/work_sans"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/upcomingplansCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintHeight_percent="0.35"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/primary_blue"
                app:strokeWidth="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newplanCard"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginTop="-32dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_container_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:layout_constraintWidth_percent="1"
                        app:layout_constraintHeight_percent="0.333"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        android:text="@string/card2Txt"
                        android:textAlignment="center"
                        android:fontFamily="@font/work_sans"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/historyCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintHeight_percent="0.35"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/primary_yellow"
                app:strokeWidth="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingplansCard"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginTop="-32dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_container_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:layout_constraintWidth_percent="1"
                        app:layout_constraintHeight_percent="0.333"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        android:text="@string/card3Txt"
                        android:textAlignment="center"
                        android:fontFamily="@font/work_sans"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/black"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/black"
        android:backgroundTint="@color/primary_darkGrey"
        app:strokeWidth="3dp"
        app:cardElevation="20dp">


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>